# Shablony

./: CMakeLists.txt  main.cpp  sql_query_builder.cpp  sql_query_builder.h
